Bug#25875, Newly created table through CREATE TABLE .. LIKE has no ndb_dd attributes